# IDEAL

./: .gitignore  IDEAL.ipynb  README.md  character_level_translation.py  ideal_translator.py  inference.txt  lfq.py  pyproject.toml  reconstruction_main.py  recurrent_lfq.py  simple_lfq_reconstructor.py  unused_new_quantization_algo.py
archive/: recurrent_lfq.py  scratch.ipynb  simple_lfq_reconstructor.py  unused_new_quantization_algo.py
src/data/: magvit_tokens_data.py
src/model/: ideal_translator.py
src/training/: reconstruction_main.py  text_reconstruction.py  translation_main.py  video_reconstruction.py
src/utils/: lfq.py  tokenizer.py
